# BoneCuttingRobot

./: .gitignore  CMakeLists.txt  LibCopy.sh  LibCopy.sh.in  README.md  initECM.sh  runECM.sh
RobotControlLib/: CMakeLists.txt
RobotControlLib/include/: RobotControl.h  RobotControlWrapper.h  TorqueControl.h
RobotControlLib/src/: RobotControl.c  RobotControl.cpp  RobotControlWrapper.cpp  TorqueControl.c  shareData.c
RobotLib/include/: RobotEtherCAT.h  RobotInterface.h  RobotLib.h  SignalFilter.h  dictionary.h  iniparser.h  key.h  kinematicInterface.h  readdata.h  robotStruct.h  shareData.h  tcp.h
RobotLib/lib/: libmodbus.so.5  libnlopt.so.0.8.2
RobotMain/: CMakeLists.txt
RobotMain/include/: BoneCuttingRobot.hpp  Joystick.hpp  LinearMotor.hpp  SerialPort.hpp  functionTest.h
RobotMain/include/sri/: ftsensor.hpp
RobotMain/src/: functionTest.cpp  main.c  main.cpp
cmake/: FindRobotLibs.cmake
res/: BoneCutting.ai
